--- a/Portfolio/html/index.html
+++ b/Portfolio/html/index.html
@@ -93,8 +93,8 @@
 
         <footer id ="contact">
             <div id="connect">
-               <strong> <p style="color: white;">Contact:</p>
-                <div class="box"></strong> 
+               <strong> <p style="color: white;">Contact:</p> </strong> 
+                <div class="box">
                         <a href="https://github.com/DeeIdowu" target="_blank"><img src="/images/github.png" class="social" alt="GitHub"></a>
                         <a href="https://www.linkedin.com/in/dee-idowu/" target="_blank"><img src="/images/linkedin.jpeg" class="social" alt="LinkedIn"></a>
                     <p style="color: white;">&copy; Copyright 2019 Dennis Idowu</p>
